src/tagged.css
.tagged {
  font-size: 1em;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  border: 1px solid #000;
}

.tagged-list {
  margin: 0;
  padding: 0.5em 0.25em 0.5em 0.5em;
  display: inline-block;
}

.tagged-item {
  display: inline-block;
  list-style: none;
  margin: 0 0.25em;
  padding: 0.25em;
}
.tagged-item:first-child {
  margin-left: 0;
}
.tagged-item:last-child {
  margin-right: 0;
}
.tagged-item-theme {
  color: #DDD;
  border-radius: 3px;
  background: #464646;
  border: 1px solid #000;
}

.tagged-remove {
  vertical-align: 1px;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.tagged-input {
  margin: 0;
  padding: 0;

  font-size: 1em;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;

  border: none;
  background: none;

  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;

  outline: 0;
  box-shadow: none;
}
.tagged-input:hover, .tagged-input:focus {
  border: none;
  background: none;

  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;

  outline: 0;
  box-shadow: none;
}

